--- a/textCounter.css
+++ b/textCounter.css
@@ -24,23 +24,23 @@
 
 #div2 p{
     font-size: 30px;
-    margin-top: 2rem;
-    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0;
 }
 
 #num{
     padding-bottom: 0;
     width: 10rem;
     height: 45px;
-    margin-top: 2rem;
-    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
     font-size: 30px;
+    margin-bottom: 0;
 }
 
 #div3{
     display: flex;
     justify-content: flex-end;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
 }
 
 #text{
