--- a/textCounter.css
+++ b/textCounter.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-#div1{
+/*#div1{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -12,6 +12,52 @@
     margin-top: 0;
     margin-left: 2.5rem;
     margin-bottom: 0;
+}*/
+
+#condition{
+    display: flex;
+    align-items: flex-start;
+    font-size: 20px;
+    margin-top: 1.8rem;
+    margin-left: 4rem;
+    height: 2rem;
+}
+
+#cdn{
+    display: flex;
+}
+
+input[type=checkbox]{
+    transform: scale(2);
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+#p2{
+    font-size: 28px;
+}
+
+#value{
+    display: flex;
+    align-content: flex-start;
+    flex-direction: row;
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: 7rem;
+}
+
+#wrt1, #wrt2{
+    height: 30px;
+    width: 6rem;
+    font-size: 100%;
+    margin-top: 0.8rem;
+}
+
+#resetBtn{
+    height: 35px;
+    margin-top: 2rem;
+    width: 6rem;
+    cursor: pointer;
 }
 
 #div2 {
@@ -19,7 +65,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 2rem;
+    margin-top: 4.5rem;
 }
 
 #div2 p{
@@ -39,49 +85,12 @@
 
 #div3{
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-top: 0.5rem;
 }
 
 #text{
     width: 65%;
-    height: 30rem;
+    height: 25rem;
     font-size: 25px;
-    margin-left: 7rem;
-    margin-right: 5rem;
-    margin-bottom: 3rem;
-}
-
-#resetBtn{
-    height: 35px;
-    margin-top: 0;
-    margin-right: 5rem;
-    width: 6rem;
-    cursor: pointer;
-}
-
-#condition{
-    display: flex;
-    align-items: flex-start;
-    font-size: 20px;
-    margin-left: 6rem;
-    height: 2rem;
-}
-
-#p2{
-    font-size: 28px;
-}
-
-#value{
-    display: flex;
-    align-content: flex-start;
-    flex-direction: row;
-    margin-top: 1rem;
-}
-
-#wrt1, #wrt2{
-    height: 30px;
-    width: 6rem;
-    font-size: 100%;
-    margin-top: 0.8rem;
 }
